# compresso

./: .buildinfo  .gitignore  README.md  advanced-usage.html  basic-example.html  clustering-visualization.html  clustering.html  examples.html  genindex.html  getting-started.html  index.html  installation.html  io.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
.doctrees/: advanced-usage.doctree  basic-example.doctree  clustering-visualization.doctree  clustering.doctree  environment.pickle  examples.doctree  getting-started.doctree  index.doctree  installation.doctree  io.doctree  quickstart.doctree
.doctrees/api/: clustering.doctree  compresso.doctree  index.doctree
.github/workflows/: docs.yml  publish.yml
_modules/: index.html
_modules/compresso/clustering/: io.html  pipeline.html  types.html
_modules/compresso/functional/: sparsify.html
_modules/compresso/io/: srp.html
_modules/compresso/nn/: sae.html  sparsify.html
_modules/compresso/params/: masked.html  srp.html
_modules/compresso/trainers/: saetrainer.html
_modules/compresso/utils/: controllers.html  schedule.html
_sources/: advanced-usage.rst.txt  clustering-visualization.rst.txt  getting-started.rst.txt  index.rst.txt  installation.rst.txt  io.rst.txt  quickstart.rst.txt
api/: clustering.html  compresso.html  index.html
demo/: README.md  requirements.txt
demo/lib/: bundle.py  cluster_view.py
demo/scripts/: validate_bundle.py
docs/: gen_figures.py  requirements.txt
docs/source/: advanced-usage.rst  basic-example.rst  clustering.ipynb  conf.py  examples.rst  index.rst  installation.rst
docs/source/api/: clustering.rst  compresso.rst  index.rst
examples/: Untitled2.ipynb  clustering.ipynb  first try.ipynb  preprocess_ml.py  recsys_build_checkpoint.py  recsys_build_checkpoint_goodbooks.py  recsys_build_checkpoint_goodbooks_compressed.py  recsys_build_checkpoint_ml20m.py  recsys_build_checkpoint_ml20m_compressed.py  recsys_eval_checkpoint.py  recsys_eval_sae_artifacts.py  recsys_sae_goodbooks.py  recsys_sae_ml20m.py  recsys_train_compressed_elsa_from_checkpoint.py  recsys_train_elsa_from_checkpoint.py  recsys_train_sae_from_checkpoint.py  recsys_train_sbert_from_checkpoint.py  sae_mnist_noc.ipynb  sae_mnist_noc_noL1.ipynb  sae_mnist_wc.ipynb  topk_sae_toy.py
examples/recsys_lib/: __init__.py  checkpoint.py
src/compresso/: __init__.py
src/compresso/clustering/: __init__.py  activation.py  io.py  labels.py  merge.py  pipeline.py  semantic.py  tags.py  types.py
src/compresso/examples/: __init__.py  checkpoint.py  runners.py
src/compresso/examples/datasets/: __init__.py  goodbooks.py  movielens20m.py
src/compresso/examples/models/: __init__.py  elsa.py
src/compresso/functional/: __init__.py  sparsify.py
src/compresso/io/: __init__.py  srp.py
src/compresso/layers/: coo.py  gated.py  kernel.py  masked.py  srp.py
src/compresso/nn/: __init__.py  sae.py  sparsify.py
src/compresso/params/: __init__.py  coo copy 2.py  coo copy.py  coo.py  masked copy.py  masked.py  srp.py
src/compresso/trainers/: __init__.py  saetrainer.py
src/compresso/utils/: controllers.py  helpers.py  ops.py  schedule.py
tests/: conftest.py  test_clustering_activation.py  test_clustering_io.py  test_clustering_tags_merge_pipeline.py  test_public_api.py  test_recsys_sbert_texts.py  test_recsys_train_from_checkpoint_script.py  test_srp_io.py  test_topk_sae.py  test_topk_sae_trainer.py  test_topk_sparsify.py  test_topk_ste.py
