[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compresso"
version = "0.1.0"
description = "Compresso: structured compression in PyTorch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "datasets>=2.19",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "numpy>=1.26",
]
semantic = [
    "sentence-transformers>=3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
