[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compresso-pytorch"
version = "0.1.0"
description = "Compresso: A PyTorch Framework for Sparse Representation Learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "numpy>=1.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
